<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="top"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/login_btn" />

    <EditText
        android:id="@+id/pwd_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/username_edit"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="62dp"
        android:ems="10"
        android:inputType="textPersonName" />

</RelativeLayout>
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff0f0f0" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10.0dip" >
 
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >
 
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="22.0dip" >
 
                <ImageView
                    android:layout_width="57.0dip"
                    android:layout_height="57.0dip"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/login_title_1"
                   />
 
                <ImageView
                    android:layout_width="66.0dip"
                    android:layout_height="66.0dip"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"

                    android:visibility="visible" />
            </FrameLayout>
 
            <EditText
                android:id="@+id/userNameText"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginLeft="12.0dip"
                android:layout_marginRight="12.0dip"
                android:layout_marginTop="15.0dip"
                android:drawablePadding="15.0dip"
                android:ems="10"
                android:hint="@string/username_edit_hint"
                android:inputType="text"
                android:paddingBottom="2.0dip"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip"
                android:paddingTop="2.0dip"
                android:singleLine="true"
                android:textColorHint="#ff999999"
                android:textSize="16.0sp" />
 
            <EditText
                android:id="@+id/passwdText"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginBottom="20.0dip"
                android:layout_marginLeft="12.0dip"
                android:layout_marginRight="12.0dip"
                android:layout_marginTop="20.0dip"
                android:drawablePadding="15.0dip"
                android:ems="10"
                android:hint="@string/pwd_edit_hint"
                android:inputType="textPassword"
                android:paddingBottom="2.0dip"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip"
                android:paddingTop="2.0dip"
                android:singleLine="true"
                android:textColorHint="#ff999999"
                android:textSize="16.0sp" />
 			<RadioGroup android:id="@+id/radioGroup" 
 			    android:contentDescription="@string/radioGroup_desc" 
 			    android:layout_width="wrap_content" 
 			    android:layout_height="wrap_content"
 			    android:layout_marginLeft="15.0dip"
 			    android:layout_marginTop="10.0dip"
 			    android:layout_marginBottom="10dip">
                
     			<RadioButton android:name="1" 
     			    android:layout_width="wrap_content" 
     			    android:layout_height="wrap_content" 
     			    android:id="@+id/radio_nomal" 
     			    android:text="@string/radio_nomal"
     			    android:textColor="@color/radio_txt_color" 
     			    android:checked="true">
     			</RadioButton>
    			<RadioButton android:name="0" 
    			    android:layout_width="wrap_content" 
    			    android:layout_height="wrap_content" 
    			    android:id="@+id/radio_test" 
    			    android:text="@string/radio_test"
    			    android:textColor="@color/radio_txt_color">
    			</RadioButton>    
			</RadioGroup>
            <Button
                android:id="@+id/bnLogin"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginLeft="12.0dip"
                android:layout_marginRight="12.0dip"
                android:singleLine="true"
                android:text="@string/login_btn"
                android:background="@color/btn_bk_color"
                android:textColor="@drawable/button_font_style"
                android:textSize="18.0sp" />
            <TextView android:id="@+id/tips_vpn" 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50.0dip"
                android:layout_marginLeft="30.0dip"
                android:textColor="@color/tip_vpn"
                android:textSize="5pt"
            android:text="@string/tips_vpn"/>
        </LinearLayout>
        
    </LinearLayout>
 
</RelativeLayout>